added proper index site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Alexander Schneider</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+  </head>
+
+
+  <body>
+    <div class="container">
+      <h2>Bio</h2>
+      <img style="max-width:100%;max-height:150px;" class="img-fluid img-thumbnail pull-right" alt="A Picture of Alexander Schneider" src="images/schneider.jpg"></td>
+      <p>My name is Alex and I am a computer science Ph.D. student at the Heinrich Heine University Düsseldorf. My research interests lie in peer-to-peer systems and
+      online participation. Further interest is sparked by electronic elections, crypto-currency and anything worth tinkering.
+      In my spare time I am a huge e-Sports enthusiast and like to follow and play competitive games. My main vice at the moment is Counter Strike: Global Offensive.
+      I also like to lift weights to compensate for my sedentary lifestyle. Check out my contact information or projects below.</p>
+    <table class="table table-responsive" style="max-width=300px;">
+      <tbody>
+        <tr><th scope="row">Email</th><td><a href="mailto:alexander@schneider.gg">alexander@schneider.gg</a> (<a href="keys/0x6707B6DF_pub.asc"><abbr title="Pretty Good Privacy">PGP</abbr> key</a>)</td></tr>
+        <tr><th scope="row">Phone</th><td><a href="tel:+4917672265456">+4917672265456</a></td></tr>
+        <tr><th>XMPP</th><td><a href="xmpp:wegi@jabber.ccc.de">wegi@jabber.ccc.de</a></td></tr>
+        <tr><th>Github</th><td><a href="https://github.com/wegi">Wegi</a></td></tr>
+        <tr><th>Bitbucket</th><td><a href="https://bitbucket.org/wegrich">WeGrich</a></td></tr>
+        <tr><th>Twitter</th><td><a href="https://twitter.com/darealwegi">@DaRealWeGi</a></td></tr>
+        <tr><th>Facebook</th><td><a href="https://facebook.com/iamwegi">Alexander Schneider (/IAmWegi)</a></td></tr>
+        <tr><th>Steam</th><td><a href="http://steamcommunity.com/id/wegi">WeGi</a></td></tr>
+        <tr><th>Reddit</th><td><a href="https://www.reddit.com/user/WeGi/">WeGi</a></td></tr>
+        <tr><th>Office</th><td><a href="http://www.cn.hhu.de/nc/unser-team/team/schneider.html">25.12.02.41, Universitätsstraße 1, Düsseldorf</a></td></tr>
+      </tbody>
+    </table>
+  </div>
+  </body>
+</html>
