add projects page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>My name is Alex and I am a computer science Ph.D. student at the Heinrich Heine University Düsseldorf. My research interests lie in peer-to-peer systems and
       online participation. Further interest is sparked by electronic elections, crypto-currency and anything worth tinkering.
       In my spare time I am a huge e-Sports enthusiast and like to follow and play competitive games. My main vice at the moment is Counter Strike: Global Offensive.
-      I also like to lift weights to compensate for my sedentary lifestyle. Check out my contact information or projects below.</p>
+      I also like to lift weights to compensate for my sedentary lifestyle. Check out my <a href="projects.html">projects and publications</a> or my contact information below.</p>
     <table class="table table-responsive" style="max-width=300px;">
       <tbody>
         <tr><th scope="row">Email</th><td><a href="mailto:alexander@schneider.gg">alexander@schneider.gg</a> (<a href="keys/0x6707B6DF_pub.asc"><abbr title="Pretty Good Privacy">PGP</abbr> key</a>)</td></tr>
