add menu structure to homepage

--- a/index.html
+++ b/index.html
@@ -9,31 +9,61 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
   </head>
 
 
   <body>
-    <div class="container">
-      <h2>Bio</h2>
-      <img style="max-width:100%;max-height:150px;" class="img-fluid img-thumbnail pull-right" alt="A Picture of Alexander Schneider" src="images/schneider.jpg"></td>
-      <p>My name is Alex and I am a computer science Ph.D. student at the Heinrich Heine University Düsseldorf. My research interests lie in peer-to-peer systems and
-      online participation. Further interest is sparked by electronic elections, crypto-currency and anything worth tinkering.
-      In my spare time I am a huge e-Sports enthusiast and like to follow and play competitive games. My main vice at the moment is Counter Strike: Global Offensive.
-      I also like to lift weights to compensate for my sedentary lifestyle. Check out my <a href="projects.html">projects and publications</a> or my contact information below.</p>
-    <table class="table table-responsive" style="max-width=300px;">
-      <tbody>
-        <tr><th scope="row">Email</th><td><a href="mailto:alexander@schneider.gg">alexander@schneider.gg</a> (<a href="keys/0x6707B6DF_pub.asc"><abbr title="Pretty Good Privacy">PGP</abbr> key</a>)</td></tr>
-        <tr><th scope="row">Phone</th><td><a href="tel:+4917672265456">+4917672265456</a></td></tr>
-        <tr><th>XMPP</th><td><a href="xmpp:wegi@jabber.ccc.de">wegi@jabber.ccc.de</a></td></tr>
-        <tr><th>Github</th><td><a href="https://github.com/wegi">Wegi</a></td></tr>
-        <tr><th>Bitbucket</th><td><a href="https://bitbucket.org/wegrich">WeGrich</a></td></tr>
-        <tr><th>Twitter</th><td><a href="https://twitter.com/darealwegi">@DaRealWeGi</a></td></tr>
-        <tr><th>Facebook</th><td><a href="https://facebook.com/iamwegi">Alexander Schneider (/IAmWegi)</a></td></tr>
-        <tr><th>Steam</th><td><a href="http://steamcommunity.com/id/wegi">WeGi</a></td></tr>
-        <tr><th>Reddit</th><td><a href="https://www.reddit.com/user/WeGi/">WeGi</a></td></tr>
-        <tr><th>Office</th><td><a href="http://www.cn.hhu.de/nc/unser-team/team/schneider.html">25.12.02.41, Universitätsstraße 1, Düsseldorf</a></td></tr>
-      </tbody>
-    </table>
+    <div class="container" style="max-width:1000px;">
+      <div class="row">
+        <div class="col-md-9">
+          <h1>Short CV</h1>
+          <p>My name is Alex and I am a computer science Ph.D. student at the Heinrich Heine University Düsseldorf. My research interests lie in peer-to-peer systems and
+          online participation. Further interest is sparked by electronic elections, crypto-currency and anything worth tinkering.
+          In my spare time I am a huge e-Sports enthusiast and like to follow and play competitive games. My main vice at the moment is Counter Strike: Global Offensive.
+          I also like to lift weights to compensate for my sedentary lifestyle. Check out my <a href="projects.html">projects and publications</a> or my contact information below.</p>
+        </div>
+        <div class="col-md-3">
+          <br>
+          <h4 class="text-center">Alexander Schneider</h4>
+          <img style="max-width:100%;" class="img-thumbnail" alt="A Picture of Alexander Schneider" src="images/schneider.jpg">
+          <br>
+          <h4 class="text-center">Navigation</h4>
+          <div class="list-group">
+            <div class="list-group-item">
+              <ul class="nav nav-pills nav-stacked list-group">
+                <li role="presentation" class="active"><a href="index.html">Short CV</a></li>
+                <li role="presentation"><a href="projects.html">Projects</a></li>
+              </ul>
+            </div>
+          </div>
+          <h4 class="text-center">Contact</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>: <a href="mailto:alexander@schneider.gg">alexander@schneider.gg</a> (<a href="keys/0x6707B6DF_pub.asc"><abbr title="Pretty Good Privacy">PGP</abbr> key</a>)
+            </li>
+            <li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i>:   <a href="tel:+4917672265456">+4917672265456</a></li>
+            <li class="list-group-item">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>: <a href="http://www.cn.hhu.de/nc/unser-team/team/schneider.html">25.12.02.41, Universitätsstraße 1, Düsseldorf</a>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-comments-o" aria-hidden="true"></i>: <a href="xmpp:wegi@jabber.ccc.de">(XMPP) wegi@jabber.ccc.de</a>
+            </li>
+          </ul>
+          <h4 class="text-center">Find me on</h4>
+          <div class="list-group">
+            <div class="list-group-item">
+              <h2>
+                <a href="https://github.com/wegi"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://bitbucket.org/wegrich"><i class="fa fa-bitbucket" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/darealwegi"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://facebook.com/iamwegi"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="https://steamcommunity.com/id/wegi"><i class="fa fa-steam" aria-hidden="true"></i></a>
+                <a href="https://www.reddit.com/user/WeGi/"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a>
+              </h2>
+            </div>
+          </div>
+      </div>
   </div>
   </body>
 </html>
