--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h2>Projects</h2>
-        <p>On this page you can find several Publications and projects in which I was involved.</p>
+        <p>On this page you can find several publications and projects in which I was involved.</p>
 
         <h3>Publications</h3>
         <ul>
@@ -23,8 +23,6 @@
           <li><a href="publications/Schneider2013a.pdf">Bachelor's Thesis: Improving Dependency Resolution of
 Python Packages</a> (<a href="publications/Schneider2013a.bib">BibTeX</a>)</li>
         </ul>
-        
-    </table>
-  </div>
+    </div>
   </body>
 </html>
