--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
 
 
   <body>
-    <div class="container" style="max-width:1000px;">
+    <div class="container" style="max-width:1000px;margin-top:3px;">
+      <div class="row">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">Alexander Schneider</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Short CV <span class="sr-only">(current)</span></a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="#">Research</a></li>
+                <li><a href="#">Impressum</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+      </div>
       <div class="row">
         <div class="col-md-9">
           <h1>Short CV</h1>
@@ -28,15 +54,6 @@
           <h4 class="text-center">Alexander Schneider</h4>
           <img style="max-width:100%;" class="img-thumbnail" alt="A Picture of Alexander Schneider" src="images/schneider.jpg">
           <br>
-          <h4 class="text-center">Navigation</h4>
-          <div class="list-group">
-            <div class="list-group-item">
-              <ul class="nav nav-pills nav-stacked list-group">
-                <li role="presentation" class="active"><a href="index.html">Short CV</a></li>
-                <li role="presentation"><a href="projects.html">Projects</a></li>
-              </ul>
-            </div>
-          </div>
           <h4 class="text-center">Contact</h4>
           <ul class="list-group">
             <li class="list-group-item">
@@ -65,5 +82,10 @@
           </div>
       </div>
   </div>
+
+
+    <script src="js/jquery-2.2.3.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
