add proper html sites and new layout

--- a/impress.html
+++ b/impress.html
@@ -33,9 +33,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li><a href="cv.html">Short CV <span class="sr-only">(current)</span></a></li>
-                <li class="active"><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="research.html">Research</a></li>
-                <li><a href="impress.html">Impressum</a></li>
+                <li class="active"><a href="impress.html">Impressum</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-9">
           <!-- Put your content in this div -->
-          <h1>Projects</h1>
+          <h1>Impressum</h1>
 
         </div>
         <div class="col-md-3">
