--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Short CV <span class="sr-only">(current)</span></a></li>
+                <li><a href="cv.html">Short CV <span class="sr-only">(current)</span></a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Research</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="impress.html">Impressum</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -43,15 +43,29 @@
       </div>
       <div class="row">
         <div class="col-md-9">
-          <h1>Short CV</h1>
+          <h1>About Me</h1>
           <p>My name is Alex and I am a computer science Ph.D. student at the Heinrich Heine University Düsseldorf. My research interests lie in peer-to-peer systems and
           online participation. Further interest is sparked by electronic elections, crypto-currency and anything worth tinkering.
           In my spare time I am a huge e-Sports enthusiast and like to follow and play competitive games. My main vice at the moment is Counter Strike: Global Offensive.
-          I also like to lift weights to compensate for my sedentary lifestyle. Check out my <a href="projects.html">projects and publications</a> or my contact information below.</p>
+          I also like to lift weights to compensate for my sedentary lifestyle. Check out my contact information or my presence on other sites at the side. If you want more
+          information about me you can read my <a href="cv.html">short CV</a>.</p>
+
+          <h1>Projects</h1>
+          <p>You can find all projects in one place at the <a href="projects.html">projects page</a>.
+            My current favorite is Coming soon...
+          </p>
+
+          <h1>Research</h1>
+          <p>All my research can be found on the <a href="research.html">research page</a>.
+            I am especially fond of my work on Coming soon...
+          </p>
+
+          <h1>Current Highlight</h1>
+          <p>Coming soon...
+          </p>
         </div>
         <div class="col-md-3">
           <br>
-          <h4 class="text-center">Alexander Schneider</h4>
           <img style="max-width:100%;" class="img-thumbnail" alt="A Picture of Alexander Schneider" src="images/schneider.jpg">
           <br>
           <h4 class="text-center">Contact</h4>
