--- a/cv.html
+++ b/cv.html
@@ -32,8 +32,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="cv.html">Short CV <span class="sr-only">(current)</span></a></li>
-                <li class="active"><a href="projects.html">Projects</a></li>
+                <li class="active"><a href="cv.html">Short CV <span class="sr-only">(current)</span></a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a href="impress.html">Impressum</a></li>
               </ul>
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-9">
           <!-- Put your content in this div -->
-          <h1>Projects</h1>
+          <h1>Short CV</h1>
 
         </div>
         <div class="col-md-3">
