add cv and fix index link

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">Alexander Schneider</a>
+              <a class="navbar-brand" href="/">Alexander Schneider</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,6 +46,18 @@
           <!-- Put your content in this div -->
           <h1>Short CV</h1>
 
+          <p>Alexander Schneider was born 1990 in a small village in Kazakhstan. As his family had its roots in Germany they relocated 1998 to Germany.</p>
+          <p>Alexander started studying computer science at the Heinrich Heine University Düsseldorf in 2010. In 2013 he finished his Bachelor's degree followed
+            by the Master's degree in 2015.</p>
+          <p>Since August 2015 Alexander works as a doctorate student in the field of online participation and peer-to-peer systems under his adviser Prof. Mauve in Düsseldorf.</p>
+
+          <h2>Interests</h2>
+
+          <p>Alexander likes to learn new things and is thus interested in a lot of different activities. Since his childhood he is interested in computer gaming, especially
+            if there is some competition to be had. The current favourite competitive game is 5vs5 Counter Strike: Global Offensive.</p>
+          <p>Programming, especially functional programming, is another passion of Alexander. His favourite programming languages are Python and Clojure.</p>
+          <p>Music is a very important part of his day to day routines. Besides the casual music sessions he likes to collect his favourite music pieces on Vinyl. Especially rare underground german HipHop
+              can get him very excited.</p>
         </div>
         <div class="col-md-3">
           <br>
