--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">Alexander Schneider</a>
+              <a class="navbar-brand" href="/">Alexander Schneider</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
