add content to research page

--- a/research.html
+++ b/research.html
@@ -46,6 +46,54 @@
           <!-- Put your content in this div -->
           <h1>Research</h1>
 
+          Here you can find all of the publicly accessible research I was involved with, sorted newest first.
+
+          <h3>Attacks against Network Voting Systems (2015)</h3>
+          <small><a href="publications/Schneider2015a.pdf">PDF</a></small> -
+          <small><a href="publications/Schneider2015a.bib">BibTeX</a></small><br>
+          <p>Electronic network voting systems are potentially very vulnerable to mass manipulation
+            of votes and / or voters. Therefore the goal is to develop systems that are against said
+            mass manipulation while not imposing overly complicated cryptography on the voter.
+            We concentrate on historic attacks and universal goals for network voting systems to
+            learn a lesson and develop according guidelines that can be universally used to design
+            and implement network voting systems.
+            The guidelines are furthermore evaluated and applied to existing voting systems.
+          </p>
+
+          <h3>Tor is not enough: Coercion in Remote Electronic Voting Systems (2015)</h3>
+          <small><a href="publications/TorIsNotEnough.pdf">PDF</a></small> -
+          <small><a href="publications/TorIsNotEnough.bib">BibTeX</a></small><br>
+          <p>Current electronic voting systems require an anonymous channel
+             during the voting phase to prevent coercion. Typically, low-latency
+             anonymization-networks like Tor are used for this purpose. In this paper
+             we devise a monitoring attack that allows an attacker to monitor whether
+             participants of an election voted, despite the use of a low-latency net-
+             work during the voting phase, thereby breaking an important part of
+             coercion-freeness. We implement a simulation carrying out our attack
+             and measure its success rates.
+          </p>
+
+          <h3>Survey on Remote Electronic Voting (2014)</h3>
+          <small><a href="publications/RemoteVotingSurvey.pdf">PDF</a></small> -
+          <small><a href="publications/RemoteVotingSurvey.bib">BibTeX</a></small><br>
+          <p>Electronic and remote voting has become a large field of research and brought forth a multiplicity of
+             schemes, systems, cryptographic primitives as well as formal definitions and requirements for electronic
+             elections. In this survey we try to give a brief and precise overview and summary of the current situation.
+          </p>
+
+          <h3>Improving Dependency Resolution of Python Packages (2013)</h3>
+          <small><a href="publications/Schneider2013a.pdf">PDF</a></small> -
+          <small><a href="publications/Schneider2013a.bib">BibTeX</a></small><br>
+          <p>For this thesis a Python module called PyDYN was designed and
+             implemented. PyDYN adapts existing generic solvers for pseudo boolean optimization
+             to compute solutions for the dependency resolution problem. For further research several
+             analyses of python installation files and their structure were made. In the context of de-
+             signing PyDYN several other needs for a metadata database or an automated downloader
+             for packages arose and were catered to in scope of the thesis.
+          </p>
+
+
+
         </div>
         <div class="col-md-3">
           <br>
