--- a/index.html
+++ b/index.html
@@ -51,17 +51,15 @@
           information about me you can read my <a href="cv.html">short CV</a>.</p>
 
           <h1>Projects</h1>
-          <p>You can find all projects in one place at the <a href="projects.html">projects page</a>.
-            My current favorite is Coming soon...
+          <p>You can find all projects in one place at the <a href="projects.html">projects page</a>. Usually I code in python or Clojure.<br/>
+            My current favorite is a fun little game of viking chess, called Hnefatafl.
+            I implemented it in Clojure and you can get it <a href="https://github.com/Wegi/clojure-hnefatafl">right here</a> - try it out if youre interested.
           </p>
 
           <h1>Research</h1>
-          <p>All my research can be found on the <a href="research.html">research page</a>.
-            I am especially fond of my work on Coming soon...
-          </p>
-
-          <h1>Current Highlight</h1>
-          <p>Coming soon...
+          <p>All my research can be found on the <a href="research.html">research page</a>.<br/>
+            I am especially fond of my work on remote electronic voting. In the paper <a href="publications/TorIsNotEnough.pdf">Tor is Not Enough</a>, my colleagues and I
+            show that even with the use of low-latency anonymity networks like Tor electronic remote voting systems are not safe to use.
           </p>
         </div>
         <div class="col-md-3">
