--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,43 @@
           <!-- Put your content in this div -->
           <h1>Projects</h1>
 
+          Here you can find current and past projects of mine. Beware: not all may be completed - lookout for the descriptions.
+          <!--
+          <h3>Title</h3>
+          <img class="img img-thumbnail" src="#" alt="Caption" /><br />
+          <strong>Status:</strong><br />
+          <small><a href="#">Github Repository</a></small><br />
+          <p>description</p>
+          <br/>
+          -->
+          <h3>Clojure Hnefatafl (Fetlar Edition)</h3>
+          <img class="img img-thumbnail" src="images/cover_hnefatafl.png" alt="Header Image for Hnefatafl" /><br />
+          <strong>Status:</strong> Finished / Not in Development<br />
+          <small><a href="https://github.com/Wegi/clojure-hnefatafl">Github Repository</a></small><br />
+          <p>This project is a Clojure implementation of the Fetlar Hnefatafl game (Viking Chess). For the official Fetlar rules check out this
+            <a href="http://www.fetlar.org/assets/files/hnefatafl/rules2013visual.pdf">official Rulebook</a>
+            A fun little few hours I spent playing with clojure. Playable in the terminal or through a cute little UI.
+          </p>
+          <br/>
+
+          <h3>Agar</h3>
+          <img class="img img-thumbnail" src="images/cover_agar.png" alt="Header Image for Agar" /><br />
+          <strong>Status:</strong> Finished / Educational <br />
+          <small><a href="https://github.com/Wegi/petri_nets">Github Repository</a></small><br />
+          <p>Written in Clojure, Agar is a <a href="https://en.wikipedia.org/wiki/Petri_net">petri net</a> simulator. Agar features a (very ugly) swing GUI
+          and can handle all types of common petri nets. Since this was a class asignment while learning clojure it is not under active development anymore.
+          Feel free to fork an play around with.</p>
+          <br/>
+
+          <h3>PyDYN - Python Dependencies You Need</h3>
+          <img class="img img-thumbnail" src="images/cover_pydyn.jpg" alt="Header Image for PyDYN" /> <br />
+          <strong>Status:</strong> Experimental <br />
+          <small><a href="https://github.com/Wegi/PyDYN">Github Repository</a></small><br />
+          <p>PyDYN is a dependency resolver written in python using linear equations solvers under the hood.
+            This project was my first dip into python so the code is probably not the prettiest.
+            Nontheless, if you are interested in resolving dependency problems in python you can play around with the source.</p>
+          <br/>
+
         </div>
         <div class="col-md-3">
           <br>
