--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,11 +2,11 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>argYou group at HHU Düsseldorf</title>
+        <title>Alexander Schneider - Geeking about</title>
     </head>
     <body>
         <div id="app"></div>
-        <script src="js/compiled/argyou.js"></script>
-        <script>argyou_homepage.core.init();</script>
+        <script src="js/compiled/schneider.js"></script>
+        <script>schneider_gg.core.init();</script>
     </body>
 </html>
