--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Alexander Schneider - Geeking about</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
         <div id="app"></div>
